k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vybe-frontend-service
spec:
  type: ClusterIP
  selector:
    app: vybe-frontend
  ports:
  - port: 80
    targetPort: 80
